...
    <string name="sold">SOLD</string>
    <string name="zero">0</string>
    <string name="reload">Reload</string>
    <string name="no_account">No account?</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="sign_in_success">Successfully signed in</string>
    <string name="no_match_found">No match found</string>
    <string name="location_not_enabled">Location is not enabled!</string>
    <string name="location_not_granted">Location permission not granted!</string>
    <string name="user_sent_offer">sent you an offer</string>
    <string name="user_answered_offer">answered an offer you made</string>
    <string name="new_message">New message</string>
    <string name="new_offer">New offer</string>
    <string name="offer_answered">Offer answered</string>
    <string name="online_since">Online since</string>
    <string name="days">&#160;days</string>
    <string name="min">min:&#160;</string>
    <string name="max">max:&#160;</string>
    <string name="price_filter">Price:</string>
    <string name="category_filter">Category:</string>
    <string name="days_filter">Online since:</string>
    <string name="CHF">&#160;CHF</string>
    <string name="Select">Select...</string>
    <string name="save">Save</string>
    <string name="field_cant_be_empty">Field cannot be empty</string>
    <string name="password_lowercase">Password should contain at least one lower case letter</string>
    <string name="password_uppercase">Password should contain at least one upper case letter</string>
...
    <string name="deleted_account">Your account has been deleted</string>
    <string name="image_capture_failure">The image could not be imported, please try again.</string>
    <string name="online_since_date">Published on : </string>
    <string name="date_missing">date missing</string>
    <string name="n_a">N/A</string>
    <string name="max_num_images">Maximum 10 images</string>
    <string name="price_filter_seekbar">Minimum price cannot be above maximum price</string>

</resources>

