...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        app:layout_constraintTop_toBottomOf="@+id/searchbar">

        <TextView
            android:id="@+id/categoryOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/select_category"
            android:textAlignment="viewStart"
            android:textSize="@dimen/overview_text_size" />
        <LinearLayout
            android:id="@+id/UserClickableFilterMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="onButtonShowPopupWindowClick">

...
